# dkml-runtime-apps

./: .gitignore  CHANGES.md  Makefile  README.md  bump-version.cmake  dkml-apps.opam  dkml-envlib.opam  dkml-exe-lib.opam  dkml-exe.opam  dkml-runtime.opam  dkml-runtime.opam.template  dkml-runtimelib.opam  dkml-runtimescripts.opam  dkml-runtimescripts.opam.template  dune-project  opam-dkml.opam  with-dkml.opam  with-dkml.opam.locked  with-dkml.opam.template
.github/workflows/: dkml.yml  syntax.yml
ci/: build-test.sh
duniverse/dkml-c-probe/.github/workflows/: test.yml
duniverse/dkml-c-probe/src/common/: probe_common.ml
duniverse/dkml-c-probe/src/config/: create_ocaml_from_file.ml
duniverse/dkml-runtime-common/: dkml-runtime-common-native.opam  dkml-runtime-common.opam
src/dkml-confdir/: confdir.c
src/dkml-exe/: cmd_init.ml  dkml_exe_lib.ml  dune
src/envlib/: CCShims_.ml  Envlib_dependencies_lite.ml  README.txt  dkml_envlib.ml  dkml_envlib.mli  dkml_envlib_intf.ml  dune
src/findup/: dune  findup.ml
src/fswatch_on_inotifywin/: dune  fswatch.ml
src/opam-dkml/: cmd_init.ml  dkml_exe.ml  dkml_exe_lib.ml  dune  opam_dkml.ml
src/probe/: dkml_probe.ml  dune
src/probe/config/: discover.ml
src/runtime/: dkml_context.ml  dkml_environment.ml  dkml_runtime.ml  dkml_runtime.mli  dune
src/runtimelib/: dkml_context.ml  dkml_environment.ml  dkml_runtimelib.ml  dkml_runtimelib.mli  dune  init_system.ml  ocaml_opam_repository_gitref.txt  opam_context.ml
src/runtimescripts/: dkml_runtimescripts.ml  dkml_runtimescripts.mli  dune
src/runtimescripts/scripts/: cache-vsstudio.ps1  install-ocaml-compiler.sh
src/with-dkml/: cmdline.ml  dune  opam_context.ml  with_dkml.ml
