(rule
 (target dkml_config.ml)
 (action
  (with-stdout-to
   %{target}
   (echo "let version = String.trim {|%{read:version.txt}|}\n"))))

(library
 (name dkml_runtimelib)
 (public_name dkml-runtimelib)
 ; Since this can be compiled using Dune's `ocaml bootstrap.ml`, we need
 ; to list _all_ transitive dependencies (at least for Dune 2.9.3)
 (libraries dkml-c-probe astring bos fmt fpath rresult sexplib))
