(library
 (name dkml_runtimescripts)
 (public_name dkml-runtimescripts)
 (libraries bos fpath re rresult))

(rule
 (target dkml_scripts.ml)
 (deps 
  (:scetoce "%{lib:dkml-compiler-env:standard-compiler-env-to-ocaml-configure-env.sh}")
  (:td      "%{lib:dkml-runtime-common:template.dkmlroot}")
  (:wd      "%{lib:dkml-runtime-common:unix/_within_dev.sh}")
  (:ct      "%{lib:dkml-runtime-common:unix/_common_tool.sh}")
  (:cf      "%{lib:dkml-runtime-common:unix/crossplatform-functions.sh}")
  (:cos     "%{lib:dkml-runtime-distribution:src/unix/create-opam-switch.sh}")
  (:poe     "%{lib:dkml-runtime-distribution:src/unix/private/platform-opam-exec.sh}")
  (:ior     "%{lib:dkml-runtime-distribution:src/unix/private/init-opam-root.sh}")
  )
 (action
  ; make directories portable to Command Prompt (which does not allow subdirs)
  ; == (run install -d  dkmldir/vendor/drd/src/unix/private dkmldir/vendor/dkml-compiler/env dkmldir/vendor/drc/unix)
  (progn
   (with-accepted-exit-codes (or 0 1) (system "mkdir dkmldir"))
   (chdir dkmldir
    (progn
     (with-accepted-exit-codes (or 0 1) (system "mkdir vendor"))
     (chdir vendor
      (progn
       (with-accepted-exit-codes (or 0 1) (system "mkdir dkml-compiler"))
       (with-accepted-exit-codes (or 0 1) (system "mkdir drc"))
       (with-accepted-exit-codes (or 0 1) (system "mkdir drd"))
       (chdir dkml-compiler (with-accepted-exit-codes (or 0 1) (system "mkdir env")))
       (chdir drc (with-accepted-exit-codes (or 0 1) (system "mkdir unix")))
       (chdir drd (progn
        (with-accepted-exit-codes (or 0 1) (system "mkdir src"))
        (chdir src (progn
         (with-accepted-exit-codes (or 0 1) (system "mkdir unix"))
         (chdir unix (with-accepted-exit-codes (or 0 1) (system "mkdir private")))))))))))
   (no-infer
    (progn
     (copy %{scetoce} dkmldir/vendor/dkml-compiler/env/standard-compiler-env-to-ocaml-configure-env.sh)
     (copy %{td}      dkmldir/vendor/dkml-compiler/template.dkmlroot)
     (copy %{wd}      dkmldir/vendor/drc/unix/_within_dev.sh)
     (copy %{ct}      dkmldir/vendor/drc/unix/_common_tool.sh)
     (copy %{cf}      dkmldir/vendor/drc/unix/crossplatform-functions.sh)
     (copy %{cos}     dkmldir/vendor/drd/src/unix/create-opam-switch.sh)
     (copy %{poe}     dkmldir/vendor/drd/src/unix/private/platform-opam-exec.sh)
     (copy %{ior}     dkmldir/vendor/drd/src/unix/private/init-opam-root.sh)))
   (run
    %{bin:ocaml-crunch}
    "--mode=plain"
    "--output=%{target}"
    "--ext=sh"
    "--ext=dkmlroot"
    "dkmldir"))))
