(executable
 (package dkml-apps)
 (name with_dkml)
 (public_name with-dkml.exe)
 ; No PPX! This should compile with the bare minimum:
 ; 1. This is installed in the Diskuv OCaml system `dkml` switch; it should be lightweight
 ;    so less security surface area and less support burden
 (libraries dkml_runtime bos logs logs.fmt fmt fmt.tty sexplib sha))
